--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -39,13 +39,18 @@
         </div>
     </div>
     <div class="row d-flex justify-content-center">
-        <div class="col-md-4 text-center" id="newBurgerForm">
+        <div class="col-md-5 text-center" id="newBurgerForm">
             <form class="create-form" action="/burgers" method="POST" id="addNewBurger">
                 <div class="form-group">
                     <input type="text" id="enterNewBurger" name="burger_name" class="form-control">
                     <button type="submit" class="btn btn-default" id="submitNewBurger">Add Burger!</button>
                 </div>
             </form>
+        </div>
+    </div>
+    <div class="row d-flex jusitfy-content-center">
+        <div class="col-md text-center" id="instructions">
+            <p class="text-muted" id="insText">Enter a burger you want to eat and click "Add Burger!"</p>
         </div>
     </div>
 </div>
